--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="manifest" href="/manifest.json" />
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Raleway" />
 
-    <title>React App</title>
+    <title>Neighbook</title>
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
