--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
             name="description"
-            content="Web site created using create-react-app"
+            content="Neighbook, le réseau social de proximité"
     />
     <link rel="apple-touch-icon" href="/logo192.png" />
 
